changed footer bgcolor

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   margin: 0;
-  background: #01B2B2;
+  background: rgb(11,100,229);
   display: flex;
   align-items:center;
   justify-content: space-between;
