--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Railsreact02app</title>
+    <title>Rails React App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
   <body>
 
     <%= yield %>
-
-    <%= javascript_pack_tag 'application' %>
-
     <%= render 'shared/footer' %>
+
   </body>
 </html>
